// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story-kind no-default-export.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-story-kind no-title.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {},
}
`;

exports[`csf-story-kind title-and-parameters.js 1`] = `
Object {
  "components": Object {
    "/Users/atanasster/component-controls/core/instrument/test/fixtures/csf/kind/title-and-parameters.js": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "attributes": Object {
        "parameters": Object {
          "addonControls": Object {
            "smart": false,
          },
          "component": "ControlsTable",
        },
        "title": "Storybook/Blocks/ControlsTable",
      },
      "component": "ControlsTable",
      "components": Object {
        "ControlsTable": "/Users/atanasster/component-controls/core/instrument/test/fixtures/csf/kind/title-and-parameters.js",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/title-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
}
`;

exports[`csf-story-kind title-controls-and-parameters.js 1`] = `
Object {
  "components": Object {
    "/Users/atanasster/component-controls/core/instrument/test/fixtures/csf/kind/title-controls-and-parameters.js": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {
    "Storybook/Kind": Object {
      "attributes": Object {
        "component": "ControlsTable",
        "parameters": Object {
          "controls": Object {
            "name": Object {
              "label": "Name",
              "order": 9999,
              "type": "ControlTypes.TEXT",
              "value": "Mark",
            },
          },
        },
        "title": "Storybook/Kind",
      },
      "component": "ControlsTable",
      "components": Object {
        "ControlsTable": "/Users/atanasster/component-controls/core/instrument/test/fixtures/csf/kind/title-controls-and-parameters.js",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/title-controls-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "title": "Storybook/Kind",
    },
  },
  "stories": Object {},
}
`;

exports[`csf-story-kind with-title.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "attributes": Object {
        "title": "Storybook/Blocks/ControlsTable",
      },
      "components": Object {},
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/with-title.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
}
`;
